basic game functions and testing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>WDI Project 1</title>
   <script src="javascript/underscore-min.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="javascript/app.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="container">
@@ -15,7 +16,7 @@
 
 
 
-    
+
   </div>
 
 </body>
