--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <script src="javascript/underscore-min.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="javascript/app.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
 </head>
 <body>
   <div class="container">
 
 
+  <div id="board-wrapper">
 
-
-
+  </div>
 
 
 
