add players array and turn-taking functions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
   </div>
 
+  <div class="info-panel">
+    <div>
+      <h3>Players:</h3>
+      <ul id="players">
+        <li style="background-color: lightblue">O</li>
+        <li>X</li>
+      </ul>
+    </div>
+  </div>
 
 
   </div>
