store game status in local storage and recall on load

--- a/index.html
+++ b/index.html
@@ -6,24 +6,31 @@
   <script src="javascript/underscore-min.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="javascript/app.js" charset="utf-8"></script>
+  <script src="javascript/load.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
 </head>
 <body>
   <div class="container">
 
+    <div id="game-setup">
 
-  <div id="board-wrapper">
+    </div>
 
-  </div>
+    <div id="board-wrapper">
+    </div>
 
-  <div class="info-panel">
-    <div>
-      <h3>Players:</h3>
-      <ul id="players">
+    <div class="info-panel">
+      <div>
+        <h3>Players:</h3>
+        <ul id="players">
+        </ul>
+      </div>
+      <ul id="controls">
+        <li id="new-game">New Game</li>
+        <li id="setup-button">Setup</li>
+        <li id="reset-game">Reset Game</li>
       </ul>
     </div>
-  </div>
-
 
   </div>
 
