--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>WDI Project 1</title>
   <script src="javascript/underscore-min.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="javascript/md5.js" charset="utf-8"></script>
+  <script src="javascript/utility.js" charset="utf-8"></script>
   <script src="javascript/app.js" charset="utf-8"></script>
   <script src="javascript/load.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
@@ -13,7 +15,11 @@
   <div class="container">
 
     <div id="game-setup">
+      <label for="board-size">Board Size:</label>
+      <select id="board-size" name="board-size"></select>
+      <div id="player-setup">
 
+      </div>
     </div>
 
     <div id="board-wrapper">
@@ -25,11 +31,14 @@
         <ul id="players">
         </ul>
       </div>
-      <ul id="controls">
-        <li id="new-game">New Game</li>
-        <li id="setup-button">Setup</li>
-        <li id="reset-game">Reset Game</li>
-      </ul>
+      <div>
+        <h3>Controls:</h3>
+        <ul id="controls">
+          <li id="new-game">New Game</li>
+          <li id="setup-button">Setup</li>
+          <li id="reset-game">Reset Game</li>
+        </ul>
+      </div>
     </div>
 
   </div>
