user update and save functions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <label for="board-size">Board Size:</label>
       <select id="board-size" name="board-size"></select>
       <div id="player-setup">
-
+        <button type="button" name="add-player-button" id="add-player-button">Add Player</button>
       </div>
     </div>
 
@@ -40,8 +40,6 @@
         </ul>
       </div>
     </div>
-
   </div>
-
 </body>
 </html>
