finish main functionality

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <div>
         <h3>Controls:</h3>
         <ul id="controls">
-          <li id="new-game">New Game</li>
+          <li id="new-game-button">New Game</li>
           <li id="setup-button">Setup</li>
-          <li id="reset-game">Reset Game</li>
+          <li id="play-button">Play</li>
+          <li id="reset-button">Reset</li>
         </ul>
       </div>
     </div>
