bug fixes and design refinements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   <script src="javascript/utility.js" charset="utf-8"></script>
   <script src="javascript/app.js" charset="utf-8"></script>
   <script src="javascript/load.js" charset="utf-8"></script>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="css/game-panel.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="css/setup-panel.css" media="screen" charset="utf-8">
 </head>
 <body>
   <div class="container">
+    <h1>TIC TAC TOE</h1>
 
     <div id="game-setup">
       <label for="board-size">Board Size:</label>
