--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>TIC TAC TOE</h1>
+    <h1 id="main-heading">TIC TAC TOE</h1>
 
     <div id="game-setup">
       <label for="board-size">Board Size:</label>
